// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with green value 1`] = `
<AdaptableBadge
  style={
    Array [
      Object {
        "borderRadius": 3,
        "paddingHorizontal": 10,
      },
      Object {
        "backgroundColor": "#EBF4EC",
      },
    ]
  }
  textStyle={
    Array [
      Object {
        "fontWeight": "600",
      },
      Object {
        "color": "#28A138",
      },
    ]
  }
  translation={
    <Translation
      passThrough="9,2"
    />
  }
/>
`;

exports[`renders with red value 1`] = `
<AdaptableBadge
  style={
    Array [
      Object {
        "borderRadius": 3,
        "paddingHorizontal": 10,
      },
      Object {
        "backgroundColor": "#FAEAEA",
      },
    ]
  }
  textStyle={
    Array [
      Object {
        "fontWeight": "600",
      },
      Object {
        "color": "#D21C1C",
      },
    ]
  }
  translation={
    <Translation
      passThrough="1,2"
    />
  }
/>
`;

exports[`renders with yellow value 1`] = `
<AdaptableBadge
  style={
    Array [
      Object {
        "borderRadius": 3,
        "paddingHorizontal": 10,
      },
      Object {
        "backgroundColor": "#FDF0E3",
      },
    ]
  }
  textStyle={
    Array [
      Object {
        "fontWeight": "600",
      },
      Object {
        "color": "#F9971E",
      },
    ]
  }
  translation={
    <Translation
      passThrough="5,8"
    />
  }
/>
`;
